
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" 
    android:layout_marginBottom="20dp" >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgObject"
                android:layout_width="match_parent"
                android:layout_height="125dp" />

            <Button
                android:id="@+id/btn_visit_place"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_button"
                android:text="@string/visited" />

            <TextView
                android:id="@+id/txtObjectName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/working_time"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_working_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/default_working_time"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone_number"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_telephone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/default_telephone_number"
                    android:textSize="20sp" />
            </LinearLayout>

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/information"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_information"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
               />
        </LinearLayout>


</ScrollView>