<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="231dp"
        android:layout_height="111dp"
        android:layout_gravity="center"
        android:id="@+id/imgProfile"
     >
    </ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_str"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ed_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
      />

        <Button
            android:id="@+id/btn_save_username"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/save" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@color/orange"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/visited_places_str"
        android:textSize="25sp"
        android:textStyle="italic" />

    <ListView
        android:id="@+id/lv_visited_places"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>